# icloudsync

./: .gitignore  Dockerfile  README.md  compartidos_albums.txt  docker-compose.example.yml  docker-compose.yml  docker-compose.yml.bak  icloud_sync_prompt.txt  pyproject.toml  run_all.sh  run_icloud_shared.sh  run_icloudpd.sh  set_mtime_from_name.py
charts/icloudsync/: Chart.yaml  README.md  questions.yaml  values.example.yaml  values.yaml
charts/icloudsync/templates/: _helpers.tpl  cronjob.yaml
icloudsync/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
icloudsync/.github/workflows/: docker.yml
icloudsync/src/icloudsync/: auth.py  photos.py  state.py
src/icloudsync/: auth.py  cli.py  config.py  logging_setup.py  photos.py  sync.py  utils.py
